--- a/index.html
+++ b/index.html
@@ -138,11 +138,10 @@
                     <div class="col text-center align-self-center"><img class="d-flex" id="heat2" src="assets/img/Planet%20Heat%20logo-h=31827b043afe21ff80757286e0e2c1cf.png"></div>
                     <div class="col-lg-3 col-xl-3 text-center item social"><a href="index.html#"><i class="icon ion-social-facebook"></i></a><a href="index.html#"><i class="icon ion-social-twitter"></i></a><a href="https://uk.linkedin.com/pub/russell-gibb/19/a09/8a9"><i class="icon ion-social-linkedin"></i></a>
                         <ul style="padding: 0px;">
-                            <li style="margin-bottom: 10px;margin-top: 10px;">Planet Heat© is the trading name of Planet Renewables Ltd.<br></li>
+                            <li style="margin-bottom: 10px;margin-top: 10px;">Planet Heat© is also the trading name of Planet Renewables Ltd.<br></li>
                             <li style="margin-bottom: 10px;">Registered in Scotland No. SC393371<br></li>
-                            <li>VAT Number: &nbsp;252936196<br></li>
                         </ul>
-                        <p class="copyright">Planet Heat © 2019</p>
+                        <p class="copyright">Planet Heat © 2020</p>
                     </div>
                 </div>
             </div>
