--- a/contact us.html
+++ b/contact us.html
@@ -35,7 +35,7 @@
     </nav>
     <div class="contact-clean">
         <form data-bss-recipient="6a9b0593c8f1aa139d02ae9d998cce55">
-            <h2 class="text-center">Contact us</h2>
+            <h2 class="text-center">SORRY - FOUND OUT THIS DOESN'T WORK - please call 07582-621960 or email russell@planet-heat.com instead</h2>
             <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div>
             <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email"></div>
             <div class="form-group"><input class="form-control" type="tel" placeholder="Telephone" name="Telephone"></div>
